<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_rect_background_surface"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name__rv_cctv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_camera_white_24dp"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:text="안방 CCTV"
            android:textColor="@color/onSurface87"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_id__rv_cctv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_camera_trans_24dp"
            android:drawablePadding="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:text="123456"
            android:textColor="@color/onSurface38"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_delete__rv_cctv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/rounded_rect_background_red"
                android:text="@string/delete"
                android:textColor="@color/background" />

            <Button
                android:id="@+id/bt_edit__rv_cctv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/rounded_rect_background"
                android:text="@string/edit"
                android:textColor="@color/background" />

            <Button
                android:id="@+id/bt_connect__rv_cctv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_rect_background_primary"
                android:text="@string/connect"
                android:textColor="@color/background" />

        </LinearLayout>

    </LinearLayout>


</layout>