<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect_background_surface"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_title__dialog_cctv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_camera_white_24dp"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:text="CCTV 추가"
            android:textColor="@color/onSurface87"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/ll_id__dialog_cctv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_name__dialog_cctv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/onSurface87"
                android:hint="CCTV 별명"
                android:inputType="number"
                android:maxLength="8"
                android:maxLines="1"
                android:textColor="@color/onSurface87"
                android:textColorHint="@color/onSurface38" />

            <EditText
                android:id="@+id/et_id__dialog_cctv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/onSurface87"
                android:digits="0123456789"
                android:hint="CCTV 아이디"
                android:inputType="number"
                android:maxLength="8"
                android:maxLines="1"
                android:textColor="@color/onSurface87"
                android:textColorHint="@color/onSurface38" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_pw__dialog_cctv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_pw__dialog_cctv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/onSurface87"
                android:digits="0123456789"
                android:hint="CCTV 비밀번호"
                android:inputType="number"
                android:maxLength="8"
                android:maxLines="1"
                android:textColor="@color/onSurface87"
                android:textColorHint="@color/onSurface38" />

            <CheckBox
                android:id="@+id/cb_pw__dialog_cctv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/onSurface38"
                android:text="비밀번호 저장"
                android:textColor="@color/onSurface38" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/check_id_in_cctv_mode"
            android:textColor="@color/onSurface60" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_cancel__dialog_cctv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_rect_background"
                android:text="@string/cancel"
                android:textColor="@color/background" />

            <Button
                android:id="@+id/bt_ok__dialog_cctv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_rect_background_primary"
                android:text="@string/ok"
                android:textColor="@color/background" />

        </LinearLayout>


    </LinearLayout>


</layout>